# RoomBooker

./: .gitignore  README.md
.github/workflows/: build.yml  docker-image.yml
Backend/: .env  Dockerfile  data_models.py  database_interfacing.py  display_api.py  logging_config.py  main.py  requirements.txt  slack_bot.py  utility.py
Backend/slack_modals/: app_home.json  bookable_room_actions.json  booking.json  change_time_booking_select.json  change_time_time_select.json  create_room.json  delete_room.json  empty.json  error_message.json  time_change.json  unbooking.json
Display/: .desktop  CMakeLists.txt  RoomBookerDisplay.desktop  bookingdisplay.cpp  bookingdisplay.h  datafetchinghandler.cpp  datafetchinghandler.h  datatypes.h  main.cpp  resources.qrc  settingstrings.h  setup.iss
Display/settings/: colorsettingedit.cpp  colorsettingedit.h  fontsettingedit.cpp  fontsettingedit.h  iconsettingedit.cpp  iconsettingedit.h  integersettingedit.cpp  integersettingedit.h  settingspopup.cpp  settingspopup.h  textsettingedit.cpp  textsettingedit.h
Display/widgets/: bookinginfo.cpp  bookinginfo.h  bookingname.cpp  bookingname.h  bookingstatus.cpp  bookingstatus.h  bookingwidget.cpp  bookingwidget.h  clickableicon.cpp  clickableicon.h  upcomingbookings.cpp  upcomingbookings.h
